# ken

./: .gitignore  00-INDEX.md  01-reality-check.md  02-strategy.md  03-roadmap.md  04-program-of-work.md  05-git-and-integration.md  AGENTS.md  CLAUDE.md  CLEAN-ROOM.md  CONTRIBUTING.md  Cargo.toml  README.md  moot.toml
crates/ken-cli/: Cargo.toml
crates/ken-cli/src/: lib.rs  main.rs  repl.rs
crates/ken-cli/tests/: cli_i1_entrypoint_abi.rs  console_exec.rs  deterministic_app.rs  effect_composition_state_console_e2e.rs  fs_read_file_lines_flip_e2e.rs  i8_clock_effect.rs  ken_check_mode.rs  ken_fmt.rs  ken_md_literate_cli.rs  library_documentation_gates.rs  px4b_native_production.rs  px7f_resource_native.rs  px7l_checked_host_recursive_bind.rs  px7m_hostresult_computational_match.rs  px7n_nested_computational_eliminator.rs  px7o_heterogeneous_eliminator_frames.rs  px7p_constructor_field_composition.rs  px8f_buffer_native.rs  px8h_heterogeneous_continuation.rs  px8l_recursive_decl_native.rs  px8ta_oriented_subcontinuation.rs  px8ta_terminal_answer_authority.rs  px8x_single_schema_observation.rs  rosetta.rs  rt_escape_second_resource_native.rs  rt_parity_native.rs  rt_span_prov_native.rs  string_op_exec.rs  t2_acceptance.rs
crates/ken-elaborator/: Cargo.toml
crates/ken-elaborator/src/: ast.rs  bytes.rs  capabilities.rs  checked_core.rs  classes.rs  compiler_driver.rs  conversions.rs  data.rs  decimal_char.rs  diagnostics.rs  elab.rs  erasure.rs  error.rs  export.rs  extract.rs  foreign.rs  format.rs  ifc.rs  layout.rs  lexer.rs  lib.rs  literate.rs  lossless.rs  modules.rs  numbers.rs  parser.rs  prelude.rs  program_admission.rs  protocol.rs  prover.rs  resolve.rs  temporal.rs  trace.rs
crates/ken-elaborator/src/effects/: algebra.rs  check.rs  extract.rs  infer.rs  itree.rs  lower.rs  mod.rs  row.rs  row_poly.rs  state.rs
crates/ken-elaborator/tests/: acceptance.rs  adversary_seal2_repros.rs  ax2_axiom_named_postulates.rs  b1_acceptance.rs  b1_exact_denotation_alphabet.rs  b2_acceptance.rs  bare_proof_selector_atom.rs  case_eq_dependent_match_sugar.rs  cat1_constructor_classes.rs  cat1_lawful_functors_package.rs  cat3_collections_package.rs  cat5_parsing_package.rs  catalog_taxonomy.rs  cc1_nonempty_validation_acceptance.rs  cc2_text_codec_numeric_acceptance.rs  cc3_parsing_cursor_decoder_acceptance.rs  cc4_diagnostic_core_acceptance.rs  cc5_pretty_doc_acceptance.rs  cc6a_process_arguments_exit_acceptance.rs  cc6b_path_posix_acceptance.rs  cc7_argparse_acceptance.rs  cc8_env_config_decoder_acceptance.rs  class_field_purity.rs  compare_ord_lexicographic_acceptance.rs  constrained_instance_elaboration.rs  conversions_acceptance.rs  coproduct_effect_signature_acceptance.rs  decimal_char_acceptance.rs  def_path_constraint_binder_unification.rs  dependent_match_nonnullary_acceptance.rs  dependent_match_nonnullary_pre_scrutinee_context.rs  dependent_match_wstyle_acceptance.rs  dotted_module_path_parser.rs  ds1_empty_dec_acceptance.rs  ds2_ord_nat_acceptance.rs  ds3_sum_combinators_acceptance.rs  ds4_list_combinators_acceptance.rs  ds5b_dependent_match_refinement_acceptance.rs  ds6a_int_deceq_acceptance.rs  ds6c_intlit_elaborator_emission.rs  (+90 more)
crates/ken-elaborator/tests/seal2_support/: mod.rs
crates/ken-foundation/: Cargo.toml
crates/ken-foundation/benches/: content_addressing.rs
crates/ken-foundation/src/: canonical.rs  hash.rs  lib.rs  store.rs  testing.rs  values.rs
crates/ken-foundation/tests/: acceptance.rs
crates/ken-host/: Cargo.toml  abi_probe.c  build.rs  build_support.rs  effect_abi_probe.c  effect_abi_v1.catalog
crates/ken-host/src/: abi_v1.rs  account_db_v1.rs  capability.rs  effect_v1.rs  effect_wire.rs  effect_wire_v1.rs  lib.rs  resource_close_v1.rs
crates/ken-host/src/abi_v1/: sigpipe.c
crates/ken-interp/: Cargo.toml
crates/ken-interp/src/: eval.rs  lib.rs  proof_erasure_checker.rs
crates/ken-interp/tests/: b3_acceptance.rs  ds6b_intlit_eq_reduction_cross_layer.rs  effect_composition_synthetic_peel_probe.rs  elim_bool_dispatch_acceptance.rs  f1_bignum_acceptance.rs  f2f3_acceptance.rs  fs_driver_build_acceptance.rs  fs_driver_build_capability_acceptance.rs  i2_console_floor.rs  i3_fs_floor.rs  i4_program_caps_step1.rs  i5_scoped_capability.rs  k1p5_ih_wstyle_vis_fold_acceptance.rs  l1_acceptance.rs  leq_int_acceptance.rs  nc12_runtime_ir_evaluator.rs  nc7_differential_trust_report.rs  nc9_proof_erasure_boundary_checker.rs  px7f_system_resource.rs  px8i_native_int_differential.rs  px8p_checked_buffer.rs  px8x_single_schema_observation.rs  rtp1_elim_reduce_ih_perf_acceptance.rs
crates/ken-kernel/: Cargo.toml
crates/ken-kernel/src/: check.rs  conv.rs  env.rs  error.rs  inductive.rs  lib.rs  obs.rs  sct.rs  subst.rs  term.rs
crates/ken-kernel/tests/: acceptance.rs  ax2_named_postulate_inertness.rs  conv_eq_congruence.rs  ds6a_int_deceq_certificate.rs  ds6b_intlit_eq_reduction.rs  k1p5_wstyle.rs  k2c_conversion.rs  k2c_series2.rs  k4_omega_motive.rs  k5_omega_fragment.rs  k7_eq_at_inductive_whnf.rs  ktr1_constructor_universe_gate.rs  obs_eq_termination_congruence.rs  sct_completeness_nested_split.rs  sigma_eq_pair_refl.rs  sigma_sort.rs
crates/ken-runtime/: Cargo.toml
crates/ken-runtime/src/: artifact_validation.rs  canonical.rs  cranelift_backend.rs  executable_artifact_contract.rs  executable_entrypoint_packaging.rs  hash.rs  ir.rs  lib.rs  native_effect_v1.rs  native_execution_differential.rs  native_int.rs  native_int_clif.rs  native_join_plan.rs  native_process_entrypoint.rs  object_linker_packaging.rs  oriented_subcontinuation_plan.rs  platform_runtime_support.rs  runtime_ir_evaluator.rs  store.rs  target_abi.rs  unknown.rs  values.rs
crates/ken-runtime/src/cranelift_backend/: compiled.rs  planning.rs  surface.rs  test_objects.rs  test_support.rs
crates/ken-runtime/src/cranelift_backend/artifact/: api.rs  mod.rs  tests.rs
crates/ken-verify/: Cargo.toml
crates/ken-verify/src/: canonical.rs  catalog.rs  filesystem.rs  host.rs  lib.rs  observation.rs  scenario.rs
crates/ken-verify/tests/: px8f_write_partition.rs
spec/: README.md  (+3 more)
(+936 files in other folders)
