[workspace]
resolver = "2"
members = [
    "crates/ken-kernel",
    "crates/ken-elaborator",
    "crates/ken-interp",
    "crates/ken-cli",
    "crates/ken-foundation",
    "crates/ken-runtime",
    "crates/ken-host",
    "crates/ken-verify",
]

# Shared package metadata. Individual crates inherit with `field.workspace = true`.
[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Pat Lasswell"]
repository = "https://github.com/ken-topos/ken" # PLACEHOLDER — set in WP F1
rust-version = "1.79"

# --- Compute/disk discipline (see docs/ops/compute-budget.md) ---
# The dominant cost on the dev laptop is the Rust build, and the biggest memory
# spike is debuginfo + linking. We minimize debuginfo (most of it lives in
# dependencies we never step through) to cut RAM, link time, and target/ size.

[profile.dev]
# Keep backtraces but drop full debuginfo for our own crates.
debug = "line-tables-only"
split-debuginfo = "unpacked"   # faster linking on Linux/macOS

[profile.dev.package."*"]
# Dependencies: no debuginfo at all — they're the bulk of compiled code.
debug = false
# Optimize DEPENDENCIES (not our own crates) even in dev/test. This is item
# C6 of docs/program/11-test-suite-and-ci-remediation.md.
#
# Why: the test suite is CPU-bound, not scheduling-bound — 3893 CPU-seconds
# of real work across 1891 tests (run 29838398785), much of it inside
# cranelift, which the native-lowering tests invoke per case. Cranelift
# compiled at opt-level 0 executes its own codegen very slowly, so we were
# paying an unoptimized compiler to compile, thousands of times.
#
# This does NOT optimize ken's own crates: `package."*"` matches
# dependencies only, so our code keeps opt-level 0 and stays debuggable, and
# backtraces through ken frames are unaffected. Semantics are unchanged
# either way — this alters only how the dependency code is compiled, never
# what is compiled or tested.
#
# Cost: dependencies compile more slowly, once per runner (there is
# deliberately no cache — see .github/workflows/ci.yml, item C8). Watch the
# Build step: it was ~40s before this. If it grows past a few minutes, the
# trade stops being obviously good and should go back to the operator with
# the number rather than being papered over by reinstating a cache.
opt-level = 2

[profile.dev.build-override]
debug = false                  # build scripts / proc-macros

# CI builds the full workspace and runs release/conformance; agents build
# scoped + debug locally. Release profile is left at defaults (CI owns it).
