[package]
name = "ken-elaborator"
description = "Ken's surface-to-kernel elaborator and (later) the verification surface: specs, obligations, prover backend."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ken-kernel = { path = "../ken-kernel" }
ken-runtime = { path = "../ken-runtime" }
serde_json = "1"
# Int-literal emission (DS-6c, ADR 0013 Layer 2 fast-follow): constructs
# Term::IntLit(BigInt) directly at the two literal-elaboration call sites.
# Same already-vetted =0.4.6 pin ken-kernel/ken-interp use
# (docs/program/dependency-deltas.md) — now a real (non-dev) dependency
# since production code constructs BigInt values, not just tests.
num-bigint = "=0.4.6"

[dev-dependencies]
ken-interp = { path = "../ken-interp" }
