[package]
name = "ken-host"
description = "Ken's audited Linux host-ABI policy boundary."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustix = { version = "=1.1.4", default-features = false, features = ["std", "fs"] }

[build-dependencies]
cc = "=1.2.41"
linux-raw-sys = { version = "=0.12.1", default-features = false, features = ["std", "general", "errno"] }
sha2 = "=0.10.9"
