[package]
name = "ken-interp"
description = "Ken's reference interpreter (the initial execution backend and reference semantics) and content-addressed runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ken-kernel = { path = "../ken-kernel" }
ken-runtime = { path = "../ken-runtime" }

[dev-dependencies]
ken-elaborator = { path = "../ken-elaborator" }
