[package]
name = "ken-interp"
description = "Ken's reference interpreter (the initial execution backend and reference semantics) and content-addressed runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ken-kernel = { path = "../ken-kernel" }
ken-runtime = { path = "../ken-runtime" }
ken-host = { path = "../ken-host" }
# fs-driver-build D3: reuse capabilities.rs's authority arithmetic in the
# runtime FS gate (authorizes) rather than reimplementing it here. elaborator's
# own ken-interp dependency is dev-only (tests), so this is not circular.
ken-elaborator = { path = "../ken-elaborator" }
# WP F1 (ADR 0009 curate-not-construct): arbitrary-precision Int arithmetic.
# Dependency-delta record: docs/program/dependency-deltas.md.
num-bigint = "=0.4.6"
num-traits = "=0.2.19"
