[package]
name = "ken-kernel"
description = "Ken's trusted kernel: the small, auditable core type theory and proof checker (the de Bruijn trust root)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
