[package]
name = "ken-kernel"
description = "Ken's trusted kernel: the small, auditable core type theory and proof checker (the de Bruijn trust root)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kernel-native Int literal (Term::IntLit) — canonical arbitrary-precision
# value for the Eq-Int value-reduction arm. Same exact pin ken-interp
# already uses (ADR 0009 curate-not-construct); see
# docs/program/dependency-deltas.md for the vetting record.
num-bigint = "=0.4.6"
